--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,7 @@
     <repositories>
         <repository>
             <id>spigotmc-repo</id>
-            <url>https://maven.elmakers.com/repository/</url>
-        </repository>
-        <repository>
-            <id>powernbt-repo</id>
-            <url>https://www.myget.org/F/egg82-java/maven/</url>
-        </repository>
-        <repository>
-            <id>sk89q-snapshots</id>
-            <url>http://maven.sk89q.com/artifactory/repo</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
 
@@ -38,13 +24,8 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.8.3-R0.1-SNAPSHOT</version>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.dpohvar.powernbt</groupId>
-            <artifactId>PowerNBT</artifactId>
-            <version>0.8.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -53,14 +34,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.sk89q</groupId>
-            <artifactId>worldedit</artifactId>
-            <version>5.6.3</version>
+            <groupId>com.sk89q.worldedit</groupId>
+            <artifactId>fastasyncworldedit</artifactId>
+            <version>19.11.13-5505943-1282-22.3.5</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/FastAsyncWorldEdit-bukkit-19.11.13-5505943-1282-22.3.5.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>com.sk89q</groupId>
+            <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard</artifactId>
-            <version>6.1</version>
+            <version>6.2.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/worldguard-bukkit-6.2.2.jar</systemPath>
         </dependency>
     </dependencies>
 
